Refactor: introduce logger in `BundleInstance`, replace Collections with List, streamline null checks, and remove unused `getMostRecent` method